[package]
name = "filters"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic_float = "1.1.0"
cpal = "0.15.3"
egui = "0.29"
egui_plot = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow" ] }
log = "0.4"
realfft = "3.4.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-leve = 2
